--- a/RuoYi-Vue/pom.xml
+++ b/RuoYi-Vue/pom.xml
@@ -210,6 +210,7 @@
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
         <module>ruoyi-his</module>
+        <module>ruoyi_green</module>
     </modules>
     <packaging>pom</packaging>
 
