--- a/RuoYi-Vue/ruoyi_green/pom.xml
+++ b/RuoYi-Vue/ruoyi_green/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ruoyi-his</artifactId>
+    <artifactId>ruoyi_green</artifactId>
 
     <description>
-        科室系统模块  已经别弃用
+        绿色通道系统模块
     </description>
     <dependencies>
 
@@ -24,6 +24,5 @@
 
 
     </dependencies>
-
 
 </project>
