完成绿色通道全体模板

--- a/RuoYi-Vue/pom.xml
+++ b/RuoYi-Vue/pom.xml
@@ -212,6 +212,7 @@
         <module>ruoyi-his</module>
         <module>ruoyi_green</module>
         <module>ruoyi_condition</module>
+        <module>ruoyi_test</module>
     </modules>
     <packaging>pom</packaging>
 
