--- a/RuoYi-Vue/ruoyi-sms/pom.xml
+++ b/RuoYi-Vue/ruoyi-sms/pom.xml
@@ -9,23 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ruoyi_condition</artifactId>
+    <artifactId>ruoyi-sms</artifactId>
     <description>
-        状态监控系统模块：这里完成设备检测，设备报警管理，位置信息管理
+       短信通知
     </description>
-    <dependencies>
 
-        <!-- 通用工具-->
+    <dependencies>
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.270</version><!-- 注：这里只是示例版本号（可直接使用），可获取并替换为 最新的版本号，注意不要使用4.0.x版本（非最新版本） -->
+        </dependency>
         <dependency>
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.ruoyi</groupId>
-            <artifactId>ruoyi-system</artifactId>
-        </dependency>
-
-
     </dependencies>
+
 
 </project>
