--- a/RuoYi-Vue/ruoyi_test/pom.xml
+++ b/RuoYi-Vue/ruoyi_test/pom.xml
@@ -21,6 +21,22 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi_green</artifactId>
+            <version>3.8.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi_condition</artifactId>
+            <version>3.8.1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
