警报管理重构完成解决依赖循环4.1

--- a/RuoYi-Vue/pom.xml
+++ b/RuoYi-Vue/pom.xml
@@ -215,6 +215,7 @@
         <module>ruoyi_test</module>
         <module>ruoyi_oss</module>
         <module>ruoyi-sms</module>
+        <module>ruoyi_caution</module>
     </modules>
     <packaging>pom</packaging>
 
