--- a/RuoYi-Vue/ruoyi-admin/pom.xml
+++ b/RuoYi-Vue/ruoyi-admin/pom.xml
@@ -96,6 +96,12 @@
             <version>3.8.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-hospital-equipment</artifactId>
+            <version>3.8.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
