--- a/RuoYi-Vue/pom.xml
+++ b/RuoYi-Vue/pom.xml
@@ -11,6 +11,8 @@
     <name>ruoyi</name>
     <url>http://www.ruoyi.vip</url>
     <description>若依管理系统</description>
+
+<!--    <packaging>war</packaging>-->
     
     <properties>
         <ruoyi.version>3.8.1</ruoyi.version>
@@ -219,6 +221,7 @@
         <module>rouyi-RabbitMQ</module>
         <module>ruoyi-MyCat</module>
         <module>ruoyi-hospital-equipment</module>
+        <module>ruoyi-net</module>
     </modules>
     <packaging>pom</packaging>
 
