--- a/RuoYi-Vue/ruoyi-net/pom.xml
+++ b/RuoYi-Vue/ruoyi-net/pom.xml
@@ -8,12 +8,9 @@
         <version>3.8.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>ruoyi_green</artifactId>
-
     <description>
-    绿色通道系统模块
-</description>
+        进销存系统模块
+    </description>
     <dependencies>
 
         <!-- 通用工具-->
@@ -24,5 +21,7 @@
 
 
     </dependencies>
+    <artifactId>ruoyi-net</artifactId>
+
 
 </project>
