--- a/RuoYi-Vue/ruoyi-admin/pom.xml
+++ b/RuoYi-Vue/ruoyi-admin/pom.xml
@@ -103,6 +103,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-net</artifactId>
+            <version>3.8.1</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
